# FOXinSOCKS

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: 2  Cargo.toml  build.rs  fox-manifest.rc  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: commands.rs
src-tauri/src/controllers/: CleanProcessesControler.rs  FileSystemController.rs  clean_processes_controller.rs  file_system_controller.rs  mod.rs
src-tauri/src/data/: data.rs
src-tauri/src/models/: mod.rs  task_model.rs  task_process_model.rs
src-tauri/src/utills/: logger.rs
src-tauri/tests/: mass_cleanup_test.rs
src/backend/models/: taskModel.tsx
src/backend/utilities/: tasksController.tsx
src/components/: LogDrawer.tsx  TasksList.tsx
src/style/: App.css
