[package]
name = "foxinsocks"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "foxinsocks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
embed-resource = "3.0"
winres = "0.1.12"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = {version = "1.47.1", features= ["full"] }
rustc-serialize = "0.3.25"
regex = "1.11.2"
walkdir = "2.5.0"
chrono = { version = "0.4", features = ["clock", "std", "serde"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
winres = "0.1.12"

[dev-dependencies]
rand = "0.8"

[profile.release]
# Dodatkowe optymalizacje i redukcja rozmiaru binarki (opcjonalne)
# Jeśli już istnieje sekcja profile.release, połącz ustawienia zamiast duplikować.
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = "z"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

